--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "generate": "graphql-codegen --config codegen.yml",
     "lint": "next lint"
   },
   "dependencies": {
+    "@graphql-codegen/typescript-operations": "^2.5.3",
     "apollo-server-micro": "^3.10.2",
     "class-validator": "^0.13.2",
     "graphql": "^15.3.0",
@@ -16,10 +18,14 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.4",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "eslint": "8.23.0",
